[CLOUDTRUST-6789] : migrated other test